add mana bar